# airgap-kor-search

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: airgap-deployment.md  model-preparation.md
scripts/: download_model.py
src/airgap_kor_search/: __init__.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  searcher.py  server.py
tests/: test_chunker.py  test_config.py  test_e2e.py  test_embedder.py  test_indexer.py  test_searcher.py
tests/fixtures/: sample_ko_1.txt  sample_ko_2.txt  sample_ko_3.txt
web/: app.js  index.html  style.css
