[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airgap-kor-search"
version = "0.1.0"
description = "에어갭 환경을 위한 경량 한국어 문서 검색 엔진"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Dev-2A" },
]
keywords = ["korean", "search", "embedding", "offline", "airgap", "faiss", "onnx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "onnxruntime>=1.16.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "tokenizers>=0.15.0",
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "rich>=13.0.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest_cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
airgap-kor-search = "airgap_kor_search.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/airgap_kor_search"]